--- a/404.html
+++ b/404.html
@@ -1,90 +1,59 @@
 <!DOCTYPE html>
-<html lang="en">
+<html data-bs-theme="light" lang="en">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Sana Mngadi</title>
-    <meta name="theme-color" content="#000000">
-    <meta name="twitter:image" content="assets/img/favicon/512.png?h=d87cc96c7e76e2ab4d6cb2682fbffc1b">
-    <meta name="twitter:description" content="Welcome to my Portfolio.
-">
-    <meta name="twitter:card" content="summary">
-    <meta name="description" content="Welcome to my Portfolio.">
-    <meta name="twitter:title" content="Sana Mngadi">
-    <meta property="og:image" content="assets/img/favicon/512.png?h=d87cc96c7e76e2ab4d6cb2682fbffc1b">
-    <meta property="og:type" content="website">
-    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="assets/img/favicon/180.png?h=aba6d94950a10405bc340c7b496adaf4">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/16.png?h=f7a77889fd7861ca7bb126f4fadf9e3a">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/32.png?h=fd5ea7eb409f5da0fc6406ee96d4585e">
-    <link rel="icon" type="image/png" sizes="180x180" href="assets/img/favicon/180.png?h=aba6d94950a10405bc340c7b496adaf4">
-    <link rel="icon" type="image/png" sizes="192x192" href="assets/img/favicon/192.png?h=2eed15bb86f3a52c2d4177dab3f1e74d">
-    <link rel="icon" type="image/png" sizes="512x512" href="assets/img/favicon/512.png?h=d87cc96c7e76e2ab4d6cb2682fbffc1b">
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css?h=1d5dcdc7c30f061713e46f9b25c5efcf">
-    <link rel="manifest" href="manifest.json?h=a919ad1bc50100369e266d1c45fea2f5">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600&amp;display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Aguafina+Script&amp;display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Aldrich&amp;display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alfa+Slab+One&amp;display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alumni+Sans&amp;display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Annie+Use+Your+Telescope&amp;display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Arbutus&amp;display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Are+You+Serious&amp;display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bangers&amp;display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Barriecito&amp;display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Beth+Ellen&amp;display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bonbon&amp;display=swap">
-    <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css?h=37efe7e508357f382d0a5b2b73cd47ee">
-    <link rel="stylesheet" href="assets/css/global/Footer-Dark.css?h=d4a47645c2d6a720db39b307550d05c8">
+    <meta name="description" content="Hi there, my name is Sana Mngadi.
+I'm a self-taught software engineer building web applications and data mining tools.
+I started my journey coding in C and moved on to Python where I strive now building Django back-ends and automated tools to improve my workflow.">
+    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="assets/img/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicons/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="180x180" href="assets/img/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="assets/img/favicons/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="assets/img/favicons/android-chrome-512x512.png">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/thomaspark/bootswatch@5f47b31/dist/slate/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Codystar&amp;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Libre+Barcode+128+Text&amp;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oxanium&amp;display=swap">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@master/devicon.min.css">
-    <link rel="stylesheet" href="https://unpkg.com/@bootstrapstudio/bootstrap-better-nav/dist/bootstrap-better-nav.min.css">
-    <link rel="stylesheet" href="assets/css/global/Navigation-Clean.css?h=1dc4face1678c181b6409399c2bca659">
-    <link rel="stylesheet" href="assets/css/global/styles.css?h=cc60b0aba363e44861de80478128eb02">
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-DVTXW6GVE5"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-DVTXW6GVE5');
-</script>
+    <link rel="stylesheet" href="assets/css/Navbar-Right-Links-icons.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
 <body>
-    <section id="hero-0">
-        <nav class="navbar navbar-light navbar-expand-lg navigation-clean">
-            <div class="container"><a class="navbar-brand" href="/"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navcol-1">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link text-center" href="/">Home</a></li>
-                        <li class="nav-item"><a class="nav-link text-center" href="/work.html">work</a></li>
-                        <li class="nav-item"><a class="nav-link text-center" href="/prices.html">Prices</a></li>
-                        <li class="nav-item"><a class="nav-link text-center" href="/contact.html">Contact Me</a></li>
-                    </ul>
-                </div>
+    <nav class="navbar navbar-expand-md border-0 py-0">
+        <div class="container-fluid"><button data-bs-toggle="collapse" class="navbar-toggler border-0" data-bs-target="#navcol-2"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navcol-2">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="/">Me</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/work.html">Work &amp; Expericies</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/contact.html">Contact Me</a></li>
+                </ul>
             </div>
-        </nav>
-    </section>
-    <div class="d-flex flex-column justify-content-center" id="main-div">
-        <section id="hero-1">
+        </div>
+    </nav>
+    <div class="fullscreen-div">
+        <section class="py-5">
             <div class="container">
                 <div class="row">
+                    <div class="col-12">
+                        <h1 class="secondary-font">Error:</h1>
+                    </div>
                     <div class="col">
-                        <h1 class="text-center text-dark">404<br>You have fallen into a dark hole.<br>There's nothing here for you.</h1>
+                        <h1 data-bss-disabled-mobile="true" data-aos="fade-right" data-aos-duration="500" data-aos-once="true" id="time-info-greeting">404 - Page Not Found</h1>
                     </div>
                 </div>
             </div>
         </section>
     </div>
-    <footer class="footer-dark">
-        <div class="container">
-            <p class="copyright">Sana Nqoba Mngadi</p>
-        </div>
-    </footer>
-    <script src="assets/js/jquery.min.js?h=84e399b8f2181ccd73394fdeddff1638"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js?h=5488c86a1260428f0c13c0f8fb06bf6a"></script>
-    <script src="https://unpkg.com/@bootstrapstudio/bootstrap-better-nav/dist/bootstrap-better-nav.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+    <script src="assets/js/bs-init.js"></script>
 </body>
 
 </html>
