--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ I started my journey coding in C and moved on to Python where I strive now build
     <link rel="icon" type="image/png" sizes="180x180" href="assets/img/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="192x192" href="assets/img/favicons/android-chrome-192x192.png">
     <link rel="icon" type="image/png" sizes="512x512" href="assets/img/favicons/android-chrome-512x512.png">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/thomaspark/bootswatch@5f47b31/dist/slate/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.2/dist/slate/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Codystar&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Libre+Barcode+128+Text&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oxanium&amp;display=swap">
@@ -47,9 +47,9 @@ I started my journey coding in C and moved on to Python where I strive now build
                     </div>
                     <div class="col-12 col-sm-8 col-md-8 col-lg-8 col-xl-8 col-xxl-8">
                         <h1>HELLO THERE&nbsp;</h1>
-                        <h3 class="secondary-font">Info</h3>
+                        <h4 class="fw-light text-body text-opacity-25">Info</h4>
                         <p>Welcome to my Portfolio.<br>My name is Sana Mngadi, but you can call me Sana<br>I hope you enjoy exploring everything and getting to know me better.<br><br>A full-stack developer, I strive to create elegant solutions that surprise and delight users, while keeping complex technical dependencies in mind for implementation, scalability and developer sanity.</p>
-                        <h3 class="secondary-font">Skills</h3>
+                        <h4 class="fw-light text-body text-opacity-25">Skills</h4>
                         <div class="row">
                             <div class="col-12 col-xxl-12 d-flex flex-row flex-wrap">
                                 <div class="card" data-bss-disabled-mobile="true" data-aos="zoom-in-up" data-aos-duration="800" data-aos-delay="400" data-aos-once="true">
@@ -124,7 +124,12 @@ I started my journey coding in C and moved on to Python where I strive now build
                                 </div>
                                 <div class="card" data-bss-disabled-mobile="true" data-aos="zoom-in-up" data-aos-duration="800" data-aos-delay="400" data-aos-once="true">
                                     <div class="card-body">
-                                        <p class="text-center devicon-amazonwebservices-original skill-icons"></p>
+                                        <p class="text-center devicon-amazonwebservices-plain-wordmark skill-icons"></p>
+                                    </div>
+                                </div>
+                                <div class="card" data-bss-disabled-mobile="true" data-aos="zoom-in-up" data-aos-duration="800" data-aos-delay="400" data-aos-once="true">
+                                    <div class="card-body">
+                                        <p class="text-center devicon-react-original skill-icons"></p>
                                     </div>
                                 </div>
                             </div>
@@ -136,11 +141,11 @@ I started my journey coding in C and moved on to Python where I strive now build
                 </div>
                 <div class="row">
                     <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-4 col-xxl-4">
-                        <h1 class="secondary-font"><i class="fas fa-lightbulb" data-bss-disabled-mobile="true" data-aos="flip-up" data-aos-duration="500" data-aos-once="true"></i>&nbsp;Goals</h1>
+                        <h4 class="fw-light text-body text-opacity-25"><i class="fas fa-lightbulb text-body" data-bss-disabled-mobile="true" data-aos="flip-up" data-aos-duration="500" data-aos-once="true"></i>&nbsp;Goals</h4>
                         <p>To find that perfect team of developers that I can call friends and build projects that we can talk about 24/7/365 non-stop.</p>
                     </div>
                     <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-4 col-xxl-4">
-                        <h1 class="secondary-font"><i class="fas fa-tools" data-bss-disabled-mobile="true" data-aos="flip-up" data-aos-duration="500" data-aos-once="true"></i>&nbsp;Tools</h1>
+                        <h4 class="fw-light text-body text-opacity-25"><i class="fas fa-tools text-body" data-bss-disabled-mobile="true" data-aos="flip-up" data-aos-duration="500" data-aos-once="true"></i>&nbsp;Tools</h4>
                         <p class="mb-1">For Development</p>
                         <ul>
                             <li>Langs: Python, JavaScript, Kotlin</li>
@@ -153,7 +158,7 @@ I started my journey coding in C and moved on to Python where I strive now build
                         </ul>
                     </div>
                     <div class="col-12 col-sm-12 col-md-12 col-lg-4 col-xl-4 col-xxl-4">
-                        <h1 class="secondary-font"><i class="fas fa-star" data-bss-disabled-mobile="true" data-aos="flip-up" data-aos-duration="500" data-aos-once="true"></i>&nbsp;Recognitions</h1>
+                        <h4 class="fw-light text-body text-opacity-25"><i class="fas fa-star text-body" data-bss-disabled-mobile="true" data-aos="flip-up" data-aos-duration="500" data-aos-once="true"></i>&nbsp;Recognitions</h4>
                         <ul>
                             <li>CS50X<span class="text-muted ms-1">Harvard</span></li>
                             <li>CS50W<span class="text-muted ms-1">Harvard</span></li>
@@ -168,8 +173,8 @@ I started my journey coding in C and moved on to Python where I strive now build
             </div>
         </section>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script src="assets/js/bs-init.js"></script>
 </body>
