--- a/work.html
+++ b/work.html
@@ -14,7 +14,7 @@ I started my journey coding in C and moved on to Python where I strive now build
     <link rel="icon" type="image/png" sizes="180x180" href="assets/img/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="192x192" href="assets/img/favicons/android-chrome-192x192.png">
     <link rel="icon" type="image/png" sizes="512x512" href="assets/img/favicons/android-chrome-512x512.png">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/thomaspark/bootswatch@5f47b31/dist/slate/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.2/dist/slate/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Codystar&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Libre+Barcode+128+Text&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oxanium&amp;display=swap">
@@ -42,7 +42,7 @@ I started my journey coding in C and moved on to Python where I strive now build
             <div class="container">
                 <div class="row">
                     <div class="col">
-                        <h1 class="secondary-font">Work &amp; Experiences</h1>
+                        <h1>Work &amp; Experiences</h1>
                         <p>Welcome to my work &amp; experience space, feel free to explore and read about my process in solving each project.</p>
                     </div>
                 </div>
@@ -156,7 +156,7 @@ I started my journey coding in C and moved on to Python where I strive now build
                                     </div>
                                 </div>
                             </div>
-                        </div><a class="d-flex flex-fill" href="#" data-bs-target="#modal-studentapp" data-bs-toggle="modal">
+                        </div><a class="d-flex flex-fill" href="/experiences/studentApp.html">
                             <div class="card"><img class="card-img w-100 d-block" src="assets/img/Home%20-%20EUL%20Student%20App%20—%20Mozilla%20Firefox%20Private%20Browsing%2012_06_2023%2010_52_33.png">
                                 <div class="card-img-overlay d-flex flex-column justify-content-end">
                                     <h4>EUL Student App</h4>
@@ -375,8 +375,8 @@ I started my journey coding in C and moved on to Python where I strive now build
             </div>
         </section>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
     <script src="assets/js/work.js"></script>
 </body>
