--- a/contact.html
+++ b/contact.html
@@ -14,11 +14,12 @@ I started my journey coding in C and moved on to Python where I strive now build
     <link rel="icon" type="image/png" sizes="180x180" href="assets/img/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="192x192" href="assets/img/favicons/android-chrome-192x192.png">
     <link rel="icon" type="image/png" sizes="512x512" href="assets/img/favicons/android-chrome-512x512.png">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/thomaspark/bootswatch@5f47b31/dist/slate/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.2/dist/slate/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Codystar&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Libre+Barcode+128+Text&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oxanium&amp;display=swap">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@master/devicon.min.css">
     <link rel="stylesheet" href="assets/css/Navbar-Right-Links-icons.css">
     <link rel="stylesheet" href="assets/css/styles.css">
@@ -41,10 +42,10 @@ I started my journey coding in C and moved on to Python where I strive now build
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h1 class="secondary-font">Contact Me</h1>
+                        <h1 class="third-font">Contact Me</h1>
                     </div>
                     <div class="col">
-                        <h1 id="time-info-greeting">Good Morning,</h1>
+                        <h1 data-bss-disabled-mobile="true" data-aos="zoom-in" data-aos-duration="600" data-aos-delay="250" data-aos-once="true" id="time-info-greeting"></h1>
                         <h1>Would you like to&nbsp;send me a message?</h1>
                         <div class="row">
                             <div class="col d-flex flex-column justify-content-start align-items-start">
@@ -57,8 +58,9 @@ I started my journey coding in C and moved on to Python where I strive now build
             </div>
         </section>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script src="assets/js/bs-init.js"></script>
     <script src="assets/js/contact.js"></script>
 </body>
