Added a progress bar to demonstrate difference Apple and Android users

--- a/experiences/studentApp.html
+++ b/experiences/studentApp.html
@@ -41,10 +41,10 @@ I started my journey coding in C and moved on to Python where I strive now build
         <section class="py-5">
             <div class="container">
                 <div class="row d-flex flex-column justify-content-start align-items-center">
-                    <div class="col-12 col-xxl-8">
+                    <div class="col-11 col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-8">
                         <h1 class="third-font">EUL Student App</h1>
                     </div>
-                    <div class="col-xxl-8">
+                    <div class="col-11 col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-8">
                         <h1 data-bss-disabled-mobile="true" data-aos="zoom-in" data-aos-duration="600" data-aos-delay="250" data-aos-once="true" id="time-info-greeting"></h1>
                         <h3 class="text-info mb-0">How I improved students academic life at EUL</h3>
                         <p>09-05-2024</p>
@@ -58,7 +58,6 @@ I started my journey coding in C and moved on to Python where I strive now build
                         <h5 class="text-info mb-2"><em>#</em><span class="fs-6 fw-semibold text-light ms-2 main-font">Choosing a framework</span></h5>
                         <p class="mb-0">One of the hardest decisions was to choose the right framework to build on.<br>I went with frameworks I already knew how to build on as my options.</p>
                         <ul>
-                            <li><a href="https://www.djangoproject.com/" target="_blank">Django</a> - Python (Back-end)</li>
                             <li><a href="https://www.djangoproject.com/" target="_blank">Django</a> - Python (Back-end)</li>
                             <li><a href="https://flask.palletsprojects.com/en/3.0.x/" target="_blank">Flask</a> - Python (Back-end)</li>
                             <li><a href="https://getbootstrap.com/docs/5.0/examples/" target="_blank">Bootstrap</a> - HTML (Front-end)</li>
@@ -83,6 +82,17 @@ I started my journey coding in C and moved on to Python where I strive now build
                         <h5 class="text-info mb-2"><em>#</em><span class="fs-6 fw-semibold text-light ms-2 main-font">Publishing to Google Play Store</span></h5>
                         <p class="mb-5">At the time I wanted to publish the "EUL Student" application Google had changed their Google Play requirements for apps to be published.<br>Requiring developers to first have 20 testers for 2 weeks constantly using the application, I was worried about this as I did not know 20 people that are willing to use an application that has not been officially advertised by the University, but I was determined to pass this requirement so I messaged the friends that I already knew were willing to use the application and I asked some people in some of our University's WhatsApp groups to if they would like to use the application and after getting 15 people using the application I was surprised that a lot of people started asking me for access to the application and the community of the application started growing very fast and I was able to pass Google's requirements to publish the application.<br><br>Currently on Google I have achieved 4.8 star rating and 100+ downloads.<br><br><a href="https://play.google.com/store/apps/details?id=com.sana.eulstudent" target="_blank">Download Here</a>&nbsp;<i class="fab fa-google-play"></i></p>
                         <h5 class="text-info mb-2"><em>#</em><span class="fs-6 fw-semibold text-light ms-2 main-font">The Apple Issue</span></h5>
+                        <p class="mb-4">I made a poll on WhatsApp in most of the universities groups to figure out how many users use iOS and Android.<br>60% were iOS users and 40% were Android... very big difference in my opinion.</p>
+                        <div class="border-secondary d-flex flex-row justify-content-between flex-wrap mb-4" style="border-radius: 8px;padding: 5px;border-width: 1px;border-style: solid;">
+                            <div class="d-flex flex-column justify-content-center align-items-center" style="background: var(--bs-gray-400);height: 25px;border-radius: 5px;border-width: 0px;border-style: none;width: 60%;"><label class="form-label text-black-50 small mb-0"><svg xmlns="http://www.w3.org/2000/svg" viewBox="-64 0 512 512" width="1em" height="1em" fill="currentColor">
+                                        <!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2023 Fonticons, Inc. -->
+                                        <path d="M318.7 268.7c-.2-36.7 16.4-64.4 50-84.8-18.8-26.9-47.2-41.7-84.7-44.6-35.5-2.8-74.3 20.7-88.5 20.7-15 0-49.4-19.7-76.4-19.7C63.3 141.2 4 184.8 4 273.5q0 39.3 14.4 81.2c12.8 36.7 59 126.7 107.2 125.2 25.2-.6 43-17.9 75.8-17.9 31.8 0 48.3 17.9 76.4 17.9 48.6-.7 90.4-82.5 102.6-119.3-65.2-30.7-61.7-90-61.7-91.9zm-56.6-164.2c27.3-32.4 24.8-61.9 24-72.5-24.1 1.4-52 16.4-67.9 34.9-17.5 19.8-27.8 44.3-25.6 71.9 26.1 2 49.9-11.4 69.5-34.3z"></path>
+                                    </svg></label></div>
+                            <div class="d-flex flex-column justify-content-center align-items-center" style="background: var(--bs-dark-text-emphasis);height: 25px;border-radius: 5px;border-width: 0px;border-style: none;width: 39%;"><label class="form-label text-body small mb-0"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -32 576 576" width="1em" height="1em" fill="currentColor">
+                                        <!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2023 Fonticons, Inc. -->
+                                        <path d="M420.55,301.93a24,24,0,1,1,24-24,24,24,0,0,1-24,24m-265.1,0a24,24,0,1,1,24-24,24,24,0,0,1-24,24m273.7-144.48,47.94-83a10,10,0,1,0-17.27-10h0l-48.54,84.07a301.25,301.25,0,0,0-246.56,0L116.18,64.45a10,10,0,1,0-17.27,10h0l47.94,83C64.53,202.22,8.24,285.55,0,384H576c-8.24-98.45-64.54-181.78-146.85-226.55"></path>
+                                    </svg></label></div>
+                        </div>
                         <p class="mb-5">I made a poll on WhatsApp in most of the universities groups to figure out how many users use iOS and Android.<br>60% were iOS users and 40% were Android... very big difference in my opinion.<br><br>Publishing on Google Play was very easy and was a smooth experience. Google Play only requires a one-time payment of $25 US dollars for a developer account and you can publish as many apps as you want.<br><br>While Apple has a more strict experience from what I have heard from youtuber and requires a $100 US dollar annually payment and you need to pay first before attempting to publish an app, this makes me very worried of trying due to the fact that I cannot afford $100 US dollar fee annually and to pay and have the application rejected is a big fear.</p>
                         <h5 class="text-info mb-2"><em>#</em><span class="fs-6 fw-semibold text-light ms-2 main-font">What I learnt</span></h5>
                         <p class="mb-2">While building the "EUL Student" app I learnt a lot from SEO to data collecting and even interacting with users to insure their bad experiences can be improved.<br>Down bellow is a list of what I learnt.</p>
